# Bridge-Game-Analysis

./: .dockerignore  .gitignore  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  _redirects  index.html  justfile  wrangler.jsonc
.github/workflows/: build.yml  ci.yml  deploy.yml
analysis/: Cargo.toml
analysis/src/: config.rs  error.rs  lib.rs
analysis/src/data/: builder.rs  loader.rs  mod.rs  schema.rs  types.rs
analysis/src/data/adapters/: pbn_bws.rs
analysis/src/identity/: mod.rs  partnership.rs  player.rs
analysis/src/metrics/: bidding.rs  declarer.rs  mod.rs  player.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: check_board1.rs
parse-files/: Cargo.toml
parse-files/src/: error.rs  lib.rs
parse-files/src/data/: schema.rs  types.rs
parse-files/src/data/adapters/: mod.rs  pbn_bws.rs
tests/integration/source/: LBC-2026-01-26.bws  LBC-2026-01-26.pbn
web/: Cargo.toml  build.rs
web/src/: analytics.rs  api.rs  main.rs  responses.rs  upload_helpers.rs
web/src/observability/: logging.rs  metrics.rs
web/static/: dashboard.html  index.html
