[package]
name = "bridge-club-analysis"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Library for analyzing bridge club game performance"

[dependencies]
bridge-parsers = { git = "https://github.com/Rick-Wilson/Bridge-Parsers" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
urlencoding = "2.1"
