[package]
name = "bridge-analysis"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "CLI for analyzing bridge club game performance"

[[bin]]
name = "bridge-analysis"
path = "src/main.rs"

[dependencies]
bridge-club-analysis = { path = "../analysis" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
