[package]
name = "parse-files"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "BWS/PBN/JSON file parsing for bridge club analysis. Schema definitions, the BWS+PBN adapter, and a couple of schema-walk enrich passes."

[dependencies]
bridge-parsers = { git = "https://github.com/Rick-Wilson/Bridge-Parsers" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
urlencoding = "2.1"
