[package]
name = "bridge-analysis-web"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Web server for bridge club game analysis"

[[bin]]
name = "bridge-analysis-web"
path = "src/main.rs"

[dependencies]
bridge-club-analysis = { path = "../analysis" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = "0.4"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
